# foxbuild

./: .gitignore  pyproject.toml  test.py
env/: flake.nix
foxbuild/: __init__.py  __main__.py  config.py  const.py  runner.py  sandbox.py  setup_sandbox_env.py  utils.py  web.py
foxbuild/runner/: __init__.py  runner.py  stage.py  utils.py  workflow.py
foxbuild/schemas/: __init__.py  foxfile.py
